# ai-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.toml.example  pyproject.toml
plans/: 2026-06-24_001_Initial_Project.md  2026-06-24_002_Interactive_Mode.md
src/ai_cli/: __init__.py  ask.py  chat.py  cli.py  client.py  config.py  context.py  integration.py  prompts.py  run.py  shell.py
src/ai_cli/data/: ai-cli.fish
tests/: test_chat.py  test_cli_args.py  test_config.py  test_context_parse.py  test_stdin.py
